...
                        ?.copyWith(color: primary.withOpacity(0.7)),
                  ),
                  Spacer(
                    flex: 2,
                  ),
                  Tooltip(
                    message: "Email Field",
                    child: TextFormField(
                      initialValue: email,
                      style: Theme.of(context)
                          .textTheme
                          .headline6
                          ?.copyWith(color: Colors.white),
...
                      validator: checkFormatEmail,
                      onChanged: (e) => this.email = e,
                    ),
                  ),
                  SizedBox(height: 20),
                  Tooltip(
                    message: "Password Field",
                    child: TextFormField(
                      initialValue: pwd,
                      obscureText: _isObscure,
                      style: Theme.of(context)
                          .textTheme
                          .headline6
...
